--- a/src/Styles/Style.module.css
+++ b/src/Styles/Style.module.css
@@ -1,27 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
-body { 
-  /* font-family: 'Poppins' sans-serif; */
-   font-size: 1rem;
+/* body {  */
+/* font-family: 'Poppins' sans-serif; */
+/* font-size: 1rem;
   font-weight: 700 !important;
   line-height: 1.5;
   color: #24282f;
   box-sizing: border-box;
   letter-spacing: 0;
-  
-    font-size: 16px;
-    /* --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  background-color: #fafafb;
+    font-size: 16px; */
+/* --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       -webkit-text-size-adjust: 100%; */
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
- } 
-
+/* -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  */
+/* }  */
 
 #Navbar {
   padding: 0.5rem 1rem;
   background-color: #fafafb;
   transition: all 0.5s ease;
- 
+
   transition-property: all;
   transition-duration: 0.5s;
   transition-timing-function: ease;
@@ -33,10 +32,9 @@ body {
   top: 0;
   right: 0;
   left: 0;
-  
+
   padding-right: 3rem !important;
   padding-left: 3rem !important;
-
 }
 
 .bar_logo {
@@ -55,147 +53,172 @@ body {
   padding-left: 50px;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
 }
 .ml-md-5,
 .mx-md-5 {
   margin-left: 3rem !important;
-}
+} */
 
- ul {
-   list-style-type: none; 
-   margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    padding-left: 0;
-        margin-bottom: 0;
-        list-style: none;
-        list-style-position: initial;
-        list-style-image: initial;
-        list-style-type: none; 
-        /* border: 1px solid #5846f6; */
-        text-align: center;
-      
-      
-} 
+ul {
+  list-style-type: none;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  list-style-position: initial;
+  list-style-image: initial;
+  list-style-type: none;
+  /* border: 1px solid #5846f6; */
+  text-align: center;
+}
 
 .right_bar {
   display: flex;
-      align-items: center;
-     padding-right: 30px;
-
+  align-items: center;
+  padding-right: 30px;
 }
 li {
   display: list-item;
   /* text-align: -webkit-match-parent; */
-      font-size: 1rem;
-        font-weight: 400;
-        /* line-height: 1.75; */
-        letter-spacing: .01em;
- 
+  font-size: 1rem;
+  font-weight: 400;
+  /* line-height: 1.75; */
+  letter-spacing: 0.01em;
 }
 
 .navbar_nar {
   display: flex;
- gap:20px;
+  gap: 20px;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
- align-items: center;
+  align-items: center;
 }
 
-.login_btn{
+.login_btn {
   border: 1px solid #5846f6;
   color: #5846f6;
   min-width: 70px;
   border-radius: 100px;
-      text-transform: none;
-        font-weight: 400;
-        appearance: none;
-        font-size: 1rem;
-          line-height: 1.5;
-          font-weight: 400;
-          padding: 0.8571428571rem 0.8571428571rem;
-            font-size: 1rem;
-            line-height: 1.5;
-            background-color:transparent;
+  text-transform: none;
+  font-weight: 400;
+  appearance: none;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 400;
+  padding: 0.8571428571rem 0.8571428571rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  background-color: transparent;
 }
 
-.sign_btn{
+.sign_btn {
   border: 1px solid #5846f6;
-    background-color: #5846f6;
-    color: #fff;
-    border-radius: 100px;
-    text-align: center;
-      vertical-align: middle;
-          font-size: 1rem;
-            line-height: 1.5;
-            font-weight: 400;
-            padding: 0.8571428571rem 0.8571428571rem;
-              font-size: 1rem;
-              line-height: 1.5;
+  background-color: #5846f6;
+  color: #fff;
+  border-radius: 100px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 400;
+  padding: 0.8571428571rem 0.8571428571rem;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 a {
   /* display: inline-block; */
-      text-decoration: none;
-        color: #48505e !important;
-        background-color: transparent;
-        font-family: "Poppins", sans-serif;
-            font-style: normal;
-            font-weight: 700 !important;
-
+  text-decoration: none;
+  color: #48505e !important;
+  background-color: transparent;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 700 !important;
 }
 
-.icon_div{
-  display: flex ;
+.icon_div {
+  display: flex;
   cursor: pointer;
 }
 
-.drop1{
-
-    z-index: 1000;
-top: 80%;
-    /* padding:20px; */
+.drop1 {
+  z-index: 5;
+  top: 80%;
+  /* padding:20px; */
   padding: 0.5rem 0;
-    margin: 0.125rem 0 0;
-    min-width: 10rem;
-    /* width:30.5%; */
-    
-  
-    margin-top: 0.125rem;
-      margin-right: 0px;
-      margin-bottom: 0px;
-      margin-left: 0px;
-    /* font-size: 1rem;  */
-    color: #24282f!important;
-    text-align: left;
-    list-style: none;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid rgba(0, 0, 0, .15)!important;
-    border-radius: 0.25rem;
+  margin: 0.125rem 0 0;
+  min-width: 10rem;
+  /* width:30.5%; */
+
+  margin-top: 0.125rem;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  /* font-size: 1rem;  */
+  color: #24282f !important;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15) !important;
+  border-radius: 0.25rem;
   line-height: 1.75;
-      box-sizing: border-box;
-
+  box-sizing: border-box;
 }
 
-.drop1 a{
- 
-    padding: 0.6rem 1.25rem;
-    /* font-size: 1rem; */
-    /* font-weight: 500; */
-    color: #24282f;
-    text-align: inherit;
-    white-space: nowrap;
-    background-color: transparent;
-    border: 0;
-   /* font-size: 18px; */
+.drop1 a {
+  padding: 0.6rem 1.25rem;
+  /* font-size: 1rem; */
+  /* font-weight: 500; */
+  color: #24282f;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+  /* font-size: 18px; */
 }
-.drop1 a:hover{
+.drop1 a:hover {
+  background-color: rgba(75, 75, 75, 0.196);
+}
+/* ////////////////////////////////navbar done////////////////////////////////////// */
 
-  background-color:rgba(75, 75, 75, 0.196)
+/* body start//////////////////////////////////////////////////////////////////////////// */
+
+.container {
+  width: 100%;
+  /* padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto; */
+  margin:auto;
+
+  display: flex;
+
+  border: 1px solid black;
+
+  font-weight: 400;
+justify-content: space-evenly;
+  color: #24282f;
  
+}
+
+.container_first_div {
+  border: 1px solid #5846f6;
+margin-left: 3rem !important;
+  /* padding: 100px; */
+  font-size: 2.3125rem;
+}
+.container_seound_div {
+  margin-right: 3rem !important;
+  /* border: 1px solid #5846f6; */
+}
+.container_seound_div img{
+ 
+width:540px;
 }
