--- a/src/Styles/Style.module.css
+++ b/src/Styles/Style.module.css
@@ -1,21 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
-/* body {  */
-/* font-family: 'Poppins' sans-serif; */
-/* font-size: 1rem;
-  font-weight: 700 !important;
-  line-height: 1.5;
-  color: #24282f;
-  box-sizing: border-box;
-  letter-spacing: 0;
-  background-color: #fafafb;
-    font-size: 16px; */
-/* --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-      --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-      -webkit-text-size-adjust: 100%; */
-/* -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  */
-/* }  */
-
 #Navbar {
   padding: 0.5rem 1rem;
   background-color: #fafafb;
@@ -46,19 +30,12 @@
   transition-duration: 0.5s;
   transition-timing-function: ease;
   transition-delay: 0s;
-  border-top-left-radius: 0.25rem !important;
+  /* border-top-left-radius: 0.25rem !important;
   border-top-right-radius: 0.25rem !important;
   border-bottom-right-radius: 0.25rem !important;
-  border-bottom-left-radius: 0.25rem !important;
+  border-bottom-left-radius: 0.25rem !important; */
   padding-left: 50px;
 }
-
-/* @media (min-width: 768px) {
-}
-.ml-md-5,
-.mx-md-5 {
-  margin-left: 3rem !important;
-} */
 
 ul {
   list-style-type: none;
@@ -84,10 +61,10 @@ ul {
 }
 li {
   display: list-item;
-  /* text-align: -webkit-match-parent; */
+
   font-size: 1rem;
   font-weight: 400;
-  /* line-height: 1.75; */
+
   letter-spacing: 0.01em;
 }
 
@@ -122,18 +99,19 @@ li {
   background-color: #5846f6;
   color: #fff;
   border-radius: 100px;
+  border: none;
   text-align: center;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 400;
   padding: 0.8571428571rem 0.8571428571rem;
   font-size: 1rem;
   line-height: 1.5;
+  cursor: pointer;
 }
 
 a {
-  /* display: inline-block; */
   text-decoration: none;
   color: #48505e !important;
   background-color: transparent;
@@ -150,17 +128,16 @@ a {
 .drop1 {
   z-index: 5;
   top: 80%;
-  /* padding:20px; */
+
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   min-width: 10rem;
-  /* width:30.5%; */
 
-  margin-top: 0.125rem;
+  /* margin-top: 0.125rem;
   margin-right: 0px;
   margin-bottom: 0px;
-  margin-left: 0px;
-  /* font-size: 1rem;  */
+  margin-left: 0px; */
+
   color: #24282f !important;
   text-align: left;
   list-style: none;
@@ -168,14 +145,13 @@ a {
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15) !important;
   border-radius: 0.25rem;
-  line-height: 1.75;
+  /* line-height: 1.75; */
   box-sizing: border-box;
 }
 
 .drop1 a {
   padding: 0.6rem 1.25rem;
-  /* font-size: 1rem; */
-  /* font-weight: 500; */
+
   color: #24282f;
   text-align: inherit;
   white-space: nowrap;
@@ -190,3 +166,61 @@ a {
 
 /* body start//////////////////////////////////////////////////////////////////////////// */
 
+.main {
+  display: flex;
+  width: 100%;
+  background-color: #fafafb;
+  /* border: 1px solid green; */
+}
+
+.mainTextSection {
+  width:50%;
+  margin-left: 3rem;
+  padding: 1rem;
+}
+
+.mainImageSection {
+  margin-right: 4rem;
+
+  padding: 2rem;
+  /* border: solid yellow 1px; */
+}
+
+.mainImageSection_image {
+  width: 80%;
+}
+/* ///////////////////////////////////// */
+.inner_first {
+ 
+  margin-left: 10%;
+  /* border: 1px solid black; */
+}
+.heading {
+  font-family: "Poppins", sans-serif;
+  /* border: 1px solid green; */
+  padding: 0% 20%;
+  font-size: 4.2vh;
+  margin-right: 2%;
+  font-weight: 900;
+  word-wrap: none;
+  color: #24282f;
+}
+.description {
+  padding: 0% 20%;
+
+  font-size: 3vh;
+  font-family: "Poppins", sans-serif;
+}
+#sign_up_button {
+  margin: 5% 20%;
+  height: 8vh;
+
+  text-align: "left";
+  width: 20vh;
+  border-radius: 100px;
+  background-color: rgb(88, 70, 246);
+  color: white;
+  font-size: 2.5vh;
+  border: none;
+  cursor: pointer;
+}
