--- a/src/Styles/Style.module.css
+++ b/src/Styles/Style.module.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
 #Navbar {
-  padding: 0.5rem 1rem;
+  /* padding: 0.5rem 1rem; */
   background-color: #fafafb;
   transition: all 0.5s ease;
-
-  transition-property: all;
+/* height:60px; */
+/* border:1px solid red; */
+  /* transition-property: all;
   transition-duration: 0.5s;
   transition-timing-function: ease;
-  transition-delay: 0s;
+  transition-delay: 0s; */
   justify-content: space-between;
 
   display: flex !important;
@@ -19,12 +20,13 @@
 z-index: 100;
   padding-right: 3rem !important;
   padding-left: 3rem !important;
+  
 }
 
 .bar_logo {
   width: 150px;
-  height: unset;
-  max-height: 88px;
+  /* height: 310px; */
+  /* max-height: 88px; */
   transition: all 0.5s ease;
   transition-property: all;
   transition-duration: 0.5s;
@@ -35,6 +37,8 @@ z-index: 100;
   border-bottom-right-radius: 0.25rem !important;
   border-bottom-left-radius: 0.25rem !important; */
   padding-left: 50px;
+ 
+  /* padding-bottom:-220; */
 }
 
 ul {
@@ -84,13 +88,14 @@ li {
   border-radius: 100px;
   text-transform: none;
   font-weight: 400;
-  appearance: none;
+  /* appearance: none; */
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 400;
   padding: 0.8571428571rem 0.8571428571rem;
   font-size: 1rem;
   line-height: 1.5;
+    cursor: pointer;
   background-color: transparent;
 }
 
@@ -169,7 +174,7 @@ a {
 .main {
   display: flex;
   width: 100%;
-  background-color: #fafafb;
+
   /* border: 1px solid green; */
 }
 
@@ -318,3 +323,182 @@ color: #24282f;
 
 /* /////////////////////////////////////////////////////////////////// */
 /* body component 2 start */
+
+.full2 {
+  background-color: #fafafb;
+  margin-top:8%;
+  padding:3rem;
+}
+
+.main2 {
+  display: flex;
+  width: 90%;
+  margin: auto;
+  background-color: #fafafb;
+  /* padding:5%; */
+
+}
+
+.mainTextSection2 {
+  width: 50%;
+
+  /* padding: 1rem; */
+  /* border: 1px solid green; */
+  box-sizing: border-box;
+}
+
+.mainImageSection2 {
+  margin-left: 4rem;
+  margin-top: 15%;
+  padding:0rem 2rem;
+  /* border: solid yellow 1px; */
+}
+
+.mainImageSection_image2 {
+  width: 90%;
+  margin-top: 0;
+  
+}
+
+/* ///////////////////////////////////// */
+.inner_first2 {
+
+  /* margin-right: 1%; */
+  /* padding: 4%; */
+  width: 70%;
+  margin-top: -2%;
+  /* border: 1px solid red; */
+  box-sizing: border-box;
+
+}
+
+.heading2 {
+  width:70%;
+  font-family: "Poppins", sans-serif;
+  /* border: 1px solid green; */
+  /* padding: 0% 20%; */
+  font-size: 4.4vh;
+  margin-right: 2%;
+ margin-top: 0;
+  font-weight: 900;
+  word-wrap: none;
+  color: #24282f;
+  box-sizing: border-box;
+
+}
+
+.description2 {
+  /* padding: 0% 20%; */
+
+  font-size: 2.6vh;
+  font-family: "Poppins", sans-serif;
+}
+
+#sign_up_button2 {
+  margin: 5% 20%;
+  height: 8vh;
+
+  text-align: "left";
+  width: 20vh;
+  border-radius: 100px;
+  background-color: rgb(88, 70, 246);
+  color: white;
+  font-size: 2.5vh;
+  border: none;
+  cursor: pointer;
+}
+.inner_first2 a{
+  color: blue !important;
+  text-decoration: underline !important;
+  /* background-color:red; */
+  
+}
+.userUpper{
+  margin-top: 15% !important;
+
+}
+.userProfile{
+  
+  margin-top:15%;
+  width: 70%;
+}
+.userProfile p{
+  margin-top: -1em;
+}
+
+.profile{
+  display: grid;
+  grid-template-columns: 16% 60%;
+  /* border:1px solid red; */
+  justify-content:start;
+  align-items:center;
+/* g; */
+}
+ .img1 {
+ width:100px;
+ 
+}
+.innerUser{
+  display: flex;
+  flex-direction: column;
+  justify-content:start;
+line-height: 1;
+  /* align-items:center; */
+  /* text-align:center; */
+
+}
+.innerUser p{
+  margin-top:0%;
+}
+/* /////////////////Carousal */
+/* .carousalMainDiv{
+
+} */
+
+.carousal {
+
+max-width: 790px;
+margin:auto;
+margin-top:8%;
+  position: relative;
+
+    box-sizing: border-box;
+
+    transition: 1s;
+    scroll-behavior: smooth;
+  }
+ #slide{
+   
+    width:790px;
+    height:400px;
+ 
+      border-radius: 10px;
+  
+}
+
+
+
+.carousalBTN2,
+.carousalBTN1 {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+width: 64px;
+  height: 64px;
+  margin-left:-35px;
+  /* margin-right: -5px; */
+  padding: 1%;  
+  margin-top: -22px;
+  justify-content:center;
+  /* box-sizing: content-box; */
+  border: none;
+  border-radius: 50%;
+
+
+  /* color: white; */
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
+
+  /* border-radius: 0 3px 3px 0; */
+}
