--- a/src/Styles/Style.module.css
+++ b/src/Styles/Style.module.css
@@ -502,3 +502,61 @@ width: 64px;
 
   /* border-radius: 0 3px 3px 0; */
 }
+
+
+
+/* /////////////////footer */
+
+.mainFooter{
+  display: flex;
+  background-color:#24282f;
+  padding:4rem;
+  /* padding-top:4rem; */
+  box-sizing: border-box;
+  color: white;
+  justify-content:space-between;
+  font-family: "Poppins", sans-serif;
+}
+.footerDive1{
+  width: 25%;
+  margin-left: 5%;
+  font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: .02em;
+  font-family: "Poppins", sans-serif;
+    font-style: normal;
+}
+.footerDive1 img {
+max-width: 120px;
+}
+.footerDive2 {
+  display:flex;
+  color: #c8cbd9;
+  gap:3%;
+  width:50%;
+      font-size: 0.875rem;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: .02em;
+}
+.footerDive2 div{
+  width:40%;
+}
+
+.footerEnd{
+  display: flex;
+  font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+        padding-top: 1.5rem !important;
+        padding-bottom: 1.5rem !important;
+
+      color: #f0f0f4;
+  justify-content:space-between;
+  
+  background-color:#1b1b1b;
+}
+.footerEnd div{
+  margin:0% 1% ;
+}
