--- a/src/Styles/Style.module.css
+++ b/src/Styles/Style.module.css
@@ -516,6 +516,7 @@ width: 64px;
   color: white;
   justify-content:space-between;
   font-family: "Poppins", sans-serif;
+  margin-top: 4%;
 }
 .footerDive1{
   width: 25%;
